Fix tasks for linux

--- a/templates/databases/mysql/tasks/docker/docker-taskfile_linux.yml
+++ b/templates/databases/mysql/tasks/docker/docker-taskfile_linux.yml
@@ -5,9 +5,9 @@ tasks:
     desc: Build services described in the stack
     aliases: [b]
     preconditions:
-      - sh: test -f ../.env
+      - sh: test -f .env
         msg: "File .env not found"
-      - sh: test -f ../docker-compose.yml
+      - sh: test -f docker-compose.yml
         msg: "File docker-compose.yml not found"
     cmds:
       - docker compose build
@@ -17,9 +17,9 @@ tasks:
     desc: Create (build if images does not exists) and start containers described in the stack
     aliases: [u, start]
     preconditions:
-      - sh: test -f ../.env
+      - sh: test -f .env
         msg: "File .env not found"
-      - sh: test -f ../docker-compose.yml
+      - sh: test -f docker-compose.yml
         msg: "File docker-compose.yml not found"
     cmds:
       - docker compose up -d --remove-orphans
@@ -29,9 +29,9 @@ tasks:
     desc: Stop and remove containers and networks described in the stack
     aliases: [d, stop]
     preconditions:
-      - sh: test -f ../.env
+      - sh: test -f .env
         msg: "File .env not found"
-      - sh: test -f ../docker-compose.yml
+      - sh: test -f docker-compose.yml
         msg: "File docker-compose.yml not found"
     cmds:
       - docker compose down
@@ -41,9 +41,9 @@ tasks:
     desc: Show logs for services
     aliases: [l]
     preconditions:
-      - sh: test -f ../.env
+      - sh: test -f .env
         msg: "File .env not found"
-      - sh: test -f ../docker-compose.yml
+      - sh: test -f docker-compose.yml
         msg: "File docker-compose.yml not found"
     cmds:
       - cmd: gnome-terminal --title="{{ .ITEM }}" -- sh -c "bash -c \"docker logs -f {{ .ITEM }};\""
