--- a/templates/databases/mysql/taskfile.yml
+++ b/templates/databases/mysql/taskfile.yml
@@ -5,7 +5,7 @@ includes:
     taskfile: ./tasks/docker/docker-taskfile_{{OS}}.yml
     aliases: [d]
     vars:
-      CONTAINER_NAMES: "dpt-mysql-multi,dpt-mysql-multi"
+      CONTAINER_NAMES: "dpt-mysql-mono,dpt-mysql-multi"
 
 tasks:
   default:
